<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_edit_word_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/ipa_keyboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/input_word"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_input"
                android:hint="@string/words"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:textColor="?colorOnSurface"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/input_ipa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_input"
                android:hint="@string/ipa"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:nextFocusDown="@id/input_meaning"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:textColor="?colorOnSurface"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/input_word"
                app:layout_constraintStart_toStartOf="@+id/input_word"
                app:layout_constraintTop_toBottomOf="@+id/input_word" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pos_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_input"
                android:orientation="horizontal"
                android:padding="4dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="@id/input_word"
                app:layout_constraintStart_toStartOf="@id/input_word"
                app:layout_constraintTop_toBottomOf="@id/input_ipa"
                tools:listitem="@layout/pos_item" />

            <EditText
                android:id="@+id/input_meaning"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_input"
                android:gravity="top|start"
                android:hint="@string/meaning"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="6"
                android:minHeight="48dp"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:textColor="?colorOnSurface"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/input_word"
                app:layout_constraintStart_toStartOf="@+id/input_word"
                app:layout_constraintTop_toBottomOf="@+id/pos_recycler_view" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_input"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="@id/input_word"
                app:layout_constraintStart_toStartOf="@id/input_word"
                app:layout_constraintTop_toBottomOf="@id/input_meaning">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="8dp"
                    android:text="@string/pref_title_remind"
                    android:textColor="?colorOnSurface"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/check_remind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.example.customviews.IPAKeyboard
        android:id="@+id/ipa_keyboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>