<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/words_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
...
                android:id="@+id/empty_list_layout"
                layout="@layout/empty_list_layout" />
        </FrameLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="96dp"
        android:importantForAccessibility="no"
...
