...
            <Button
                android:id="@+id/button_word"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_choose_mode_desc" />

            <Button
                android:id="@+id/button_meaning"
...
