<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            app:buttonGravity="center_vertical"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TitleTextAppearance" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.example.customviews.materialsearchview.MaterialSearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/search_hint">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?colorSurface"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </com.example.customviews.materialsearchview.MaterialSearchView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_to_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/words_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/bottom_nav_height"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <include
                android:id="@+id/empty_list_layout"
                layout="@layout/empty_list_layout" />
        </FrameLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="96dp"
        android:importantForAccessibility="no"
        android:text="@string/add_word"
        android:textColor="?colorOnPrimary"
        app:backgroundTint="?colorPrimary"
        app:icon="@drawable/ic_add"
        app:iconTint="?colorOnPrimary" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>