...
            android:id="@+id/action_routing_fragment_to_auth_flow"
            app:destination="@id/auth_flow"
            app:popUpTo="@id/routing_fragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_routing_fragment_to_home_fragment"
            app:destination="@id/home_fragment"
            app:popUpTo="@id/routing_fragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/home_fragment"
        android:name="com.example.wordnotes.ui.home.HomeFragment"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_fragment_to_word_detail_fragment"
            app:destination="@id/word_detail_fragment" />
        <action
            android:id="@+id/action_home_fragment_to_add_edit_word_fragment"
            app:destination="@id/add_edit_word_fragment" />
    </fragment>
    <fragment
        android:id="@+id/add_edit_word_fragment"
        android:name="com.example.wordnotes.ui.addeditword.AddEditWordFragment"
        tools:layout="@layout/fragment_add_edit_word">
        <argument
...
