...
    <string name="pref_title_start_time">Start time</string>
    <string name="pref_title_remind">Remind</string>
    <string name="pref_title_number_of_reminds_a_day">Number of reminds a day</string>

    <string name="part_of_speech">Part of Speech</string>
    <string name="save">Save</string>
    <string name="add_new_word">Add new word</string>
    <string name="edit_word">Edit word</string>
    <string name="add_word">Add word</string>
    <string name="stop_remind">Stop remind</string>
    <string name="reminder">Reminder</string>
    <string name="search_hint">Search word</string>
    <string name="request_permission">Request permission</string>
    <string name="permission_rationale">You must allow permission to use this feature</string>
...
